--- a/face-classifier/package.json
+++ b/face-classifier/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {
     "typescript": "~5.9.3",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vite-plugin-mkcert": "^1.17.9"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
