--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,28 +1,73 @@
+absl-py==2.3.1
+astunparse==1.6.3
 blinker==1.9.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
 click==8.3.1
-daal==2025.9.0
+contourpy==1.3.3
+cycler==0.12.1
+decorator==4.4.2
 dotenv==0.9.9
+facenet-pytorch==2.5.3
+fer==25.10.3
+ffmpeg-python==0.2.0
+filelock==3.19.1
 Flask==3.1.2
 flask-cors==6.0.1
+flatbuffers==25.9.23
+fonttools==4.61.0
+fsspec==2025.9.0
+future==1.0.0
+gast==0.7.0
+google-pasta==0.2.0
+grpcio==1.76.0
+h5py==3.15.1
+idna==3.11
 ImageIO==2.37.2
+imageio-ffmpeg==0.6.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
-joblib==1.5.2
-lazy_loader==0.4
-MarkupSafe==3.0.3
-networkx==3.6
+keras==3.12.0
+kiwisolver==1.4.9
+libclang==18.1.1
+Markdown==3.10
+markdown-it-py==4.0.0
+MarkupSafe==2.1.5
+matplotlib==3.10.7
+mdurl==0.1.2
+ml_dtypes==0.5.4
+moviepy==1.0.3
+mpmath==1.3.0
+namex==0.1.0
+networkx==3.5
 numpy==2.2.6
+opencv-contrib-python==4.12.0.88
 opencv-python==4.12.0.88
+opt_einsum==3.4.0
+optree==0.18.0
 packaging==25.0
-pillow==12.0.0
+pandas==2.3.3
+pillow==11.3.0
+proglog==0.1.12
+protobuf==6.33.2
+Pygments==2.19.2
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
-scikit-image==0.25.2
-scikit-learn==1.7.2
-scikit-learn-intelex==2025.9.0
-scipy==1.16.3
-tbb==2022.3.0
-tcmlib==1.4.1
-threadpoolctl==3.6.0
-tifffile==2025.10.16
+pytz==2025.2
+requests==2.32.5
+rich==14.2.0
+six==1.17.0
+sympy==1.14.0
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+tensorflow==2.20.0
+termcolor==3.2.0
+torch==2.9.1+cpu
+torchvision==0.24.1+cpu
 tqdm==4.67.1
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.6.0
 Werkzeug==3.1.4
+wrapt==2.0.1
