build(ci): add dependency installation command

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,5 +11,6 @@ create-pages:
   # Functions that should be executed before the build script is run
   before_script:
     - cd mood-lens
+    - npm install
   script:
     - npm run build
